updates and fixes

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -187,6 +187,7 @@
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
   <script src="js/validator.min.js"></script>
+  <script src="js/bootstrap-typeahead.min.js"></script>
   <script src="js/question-ops.js"></script>
 
 </body>
