--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -77,10 +77,10 @@
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		src="js/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
-  <script src="js/question-ops.js"></script>
+    <script src="js/question-ops.js"></script>
 
 </body>
 </html>
