--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -185,24 +185,16 @@
 
 			</form>
 
-
-
 		</div>
 		<div class="filler"></div>
 
 		<hr />
 
 		</div>
-		<!--<div id="question-list">
-    </div>-->
-
 	</div>
 
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<!--<script src="js/validator.min.js"></script>-->
 	<script src="js/bootstrap-typeahead.min.js"></script>
 	<script src="js/smoke.min.js"></script>
 	<script src="js/question-ops.js"></script>
