--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,34 +44,286 @@
 		</div>
 	</nav>
 	<!-- Top Navigation bar end -->
-	
+
 	<div class="filler"></div>
-	
+
 	<!-- Main container -->
 	<div class="container">
 
-
-		<div class="well">Forms content will go here</div>
+		<div class="pull-right"><button class="btn btn-primary modbut" id="createQuestion" type="submit">Create</button>
+		</div>
 		<div class="filler"></div>
+		<div class="well">
+			<form id="query-form"  role="form" autocomplete="off">
+				<div class="row">
 
+					<div class="form-group col-md-4">
+						<label for="head">Head</label> 
+						<input type="text" class="form-control" name="head" id="head-query"></input>
+					</div>
+
+					<div class="form-group col-md-4">
+						<label for="lesson">Lesson</label>
+						<input type="text" class="form-control" name="lesson" id="lesson-query"></input>
+					</div>
+
+					<div class="form-group col-md-4">
+						<label for="topic">Topic</label>
+						<input type="text" class="form-control" name="topic" id="topic-query"></input>
+					</div>
+
+
+				</div>
+
+				<div class="pull-right"><button type="submit" class="btn btn-primary" id="querySubmit">Submit</button>
+				</div>
+				<div class="filler-small"></div>
+			</form>
+
+		</div>
+		<div class="filler"></div>
+		<div class="alert alert-success alert-dismissible" id="quesSuccess" role="alert" hidden="true">
+	  		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+	  		<span aria-hidden="true">&times;</span></button>
+	  		<strong>Success!</strong> Question submitted
+		</div>
+
+		<h4>Questions</h4>
 		<hr />
+		<div id="question-list"></div>
 
-	    <div id="question-list">
-	  		
-	    </div>
+	</div>
 
+	<div id="questionDeleteModal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-hidden="true">&times;</button>
+					<h4 class="modal-title">Delete Question</h4>
+				</div>
+				<div class="modal-body">
+					<p>Are you sure, you want to delete?</p>
+				</div>
+				<div class="modal-footer">
+        			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        			<button type="button" class="btn btn-danger" id="questionDelete">Delete</button>
+      			</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div id="questionEditModal" class="modal fade">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-hidden="true">&times;</button>
+					<h4 class="modal-title">Create/Edit Question</h4>
+				</div>
+				<div class="modal-body">
+					<div class="well">
+						<form id="question-form" data-toggle="validator" role="form">
+							<div class="row">
+
+								<div class="form-group col-md-4">
+								<input type="hidden" id="quesId"></input>
+									<label for="head">Head</label> <input type="text"
+										class="form-control" name="head" id="head"
+										placeholder="Head text" data-smk-msg="Head cannot be empty"
+										required="true"> </input>
+									<div class="help-block with-errors"></div>
+
+								</div>
+
+								<div class="form-group col-md-4">
+
+									<label for="lesson">Lesson</label> <input type="text"
+										class="form-control" name="lesson" id="lesson"
+										placeholder="Lesson text"
+										data-smk-msg="Lesson cannot be empty" required="true">
+									</input>
+									<div class="help-block with-errors"></div>
+
+								</div>
+
+								<div class="form-group col-md-4">
+
+									<label for="topic">Topic</label> <input type="text"
+										class="form-control" name="topic" id="topic"
+										placeholder="Topic text" data-smk-msg="Topic cannot be empty"
+										required="true"> </input>
+									<div class="help-block with-errors"></div>
+
+								</div>
+
+
+							</div>
+							<hr />
+
+							<div class="form-group">
+								<label for="questionContent">Question</label>
+								<textarea type="text" class="form-control"
+									name="questionContent" id="questionContent"
+									placeholder="Question content here" rows="6"
+									data-smk-msg="Question content cannot be empty" required="true"></textarea>
+								<div class="help-block with-errors"></div>
+							</div>
+							<div class="form-group">
+								<label for="option1">Option 1</label>
+								<textarea type="text" class="form-control" name="option1"
+									id="option1" placeholder="Option text" rows="2"
+									data-smk-msg="Option 1 cannot be empty" required="true"></textarea>
+								<div class="help-block with-errors"></div>
+							</div>
+							<div class="form-group">
+								<label for="option2">Option 2</label>
+								<textarea type="text" class="form-control" name="option2"
+									id="option2" placeholder="Option text" rows="2"
+									data-smk-msg="Option 2 cannot be empty" required="true"></textarea>
+								<div class="help-block with-errors"></div>
+							</div>
+							<div class="form-group">
+								<label for="option3">Option 3</label>
+								<textarea type="text" class="form-control" name="option3"
+									id="option3" placeholder="Option text" rows="2"
+									data-smk-msg="Option 3 cannot be empty" required="true"></textarea>
+								<div class="help-block with-errors"></div>
+							</div>
+							<div class="form-group">
+								<label for="option4">Option 4</label>
+								<textarea type="text" class="form-control" name="option4"
+									id="option4" placeholder="Option text" rows="2"
+									data-smk-msg="Option 4 cannot be empty" required="true"></textarea>
+								<div class="help-block with-errors"></div>
+							</div>
+							<div class="filler-small"></div>
+							<hr />
+
+
+							<div class="filler-small"></div>
+
+							<div class="row">
+
+								<div class="form-group col-md-4">
+
+									<label for="head">Syllabus</label> <input type="text"
+										class="form-control" name="syllabus" id="syllabus"
+										data-smk-msg="Syllabus cannot be empty"
+										placeholder="Option text" required="true"></input>
+									<div class="help-block with-errors"></div>
+
+								</div>
+
+								<div class="form-group col-md-4">
+
+									<label for="lesson">Exam</label> <input type="text"
+										class="form-control" name="exam" id="exam"
+										data-smk-msg="Exam cannot be empty" placeholder="Option text"
+										required="true"></input>
+									<div class="help-block with-errors"></div>
+
+								</div>
+
+								<div class="form-group col-md-4">
+
+									<label for="topic">Difficulty</label> <input type="text"
+										class="form-control" name="difficulty" id="difficulty"
+										data-smk-pattern="^(EASY|MODERATE|DIFFICULT|VERYDIFFICULT)$"
+										data-smk-msg="Enter either EASY,MODERATE,DIFFICULT or VERYDIFFICULT"
+										placeholder="Option text" required="true"></input>
+									<div class="help-block with-errors"></div>
+
+								</div>
+
+
+							</div>
+
+							<hr />
+
+
+
+							<button type="submit" class="btn btn-primary" id="questionSubmit">Submit
+							</button>
+
+
+						</form>
+
+					</div>
+					<div class="filler"></div>
+
+					<hr />
+
+				</div>
+
+
+
+
+
+			</div>
+			<!--<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div>-->
+		</div>
+	</div>
 	</div>
 
 
 
-
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!--<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/bootstrap-typeahead.min.js"></script>
-  	<script src="js/question-ops.js"></script>
+	<script src="js/smoke.min.js"></script>
+	<script src="js/mustache.min.js"></script>
+	<script src="js/question-ops.js"></script>
+
+	<script id="questionTemplate" type="text/template">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<div class="row">
+					<div class="col-md-10">
+						<h3 class="panel-title">Question {{qNo}}</h3>
+					</div>
+					<div class="col-md-2">
+						<div aria-label="..." role="group"
+							class="btn-group pull-right btn-group-xs">
+							<button type="button" data-id="{{id}}"
+								class="modbut btn btn-default">
+								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+							</button>
+							<button type="button" data-id="{{id}}"
+								class="delbut btn btn-default">
+								<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+							</button>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			<div class="panel-body">
+				
+				<div class="row">
+					<div class="col-md-12">{{questionContent}}</div>
+				</div>
+				<div class="filler-small"></div>
+
+				{{#optionList}}
+				<div class="row">
+					<div class="col-md-10">{{opAlpha}}) {{optionText}}</div>
+				</div>
+				{{/optionList}}
+
+			</div>
+		</div>
+
+	</script>
+
 
 </body>
 </html>
