--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -20,30 +20,8 @@
 
 </head>
 <body>
-	<!-- Top Navigation bar start -->
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-					aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">Questions</a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="home">Home</a></li>
-					<li><a href="create">Create</a></li>
-					<li><a href="categories">Configure</a></li>
-				</ul>
-			</div>
-			<!--/.nav-collapse -->
-		</div>
-	</nav>
-	<!-- Top Navigation bar end -->
+	<div th:replace="fragments/header :: header">...</div>
+	
 
 	<div class="filler"></div>
 
