added asyn for mathJax

--- a/src/main/resources/templates/explore.html
+++ b/src/main/resources/templates/explore.html
@@ -10,7 +10,7 @@
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/custom.css" rel="stylesheet" />
-<script type="text/javascript"
+<script type="text/javascript" async
 	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
 	
 </script>
