--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,6 +20,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="home">Home</a></li>
 					<li><a href="explore">Explore</a></li>
+					<li><a href="create">Create</a></li>
 					<li><a href="configure">Configure</a></li>
 				</ul>
 			</div>
